Start of results. Tabaular not perfect :)

--- a/project_1/.gitignore
+++ b/project_1/.gitignore
@@ -10,3 +10,8 @@
 /exercise2_Note.pdf
 /exercise2_Note.synctex.gz
 /Testdata.tar.gz
+/exercise3_Note.aux
+/exercise3_Note.log
+/exercise3_Note.out
+/exercise3_Note.pdf
+/exercise3_Note.synctex.gz
